--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -13,7 +13,7 @@ node {
    }
    stage('docker build/push') {
      docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-       def app = docker.build("wardviaene/docker-nodejs-demo:${commit_id}", '.').push()
+       def app = docker.build("anilachanta/nodejsapp:${commit_id}", '.').push()
      }
    }
 }
