--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,7 +12,7 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+     docker.withRegistry('https://index.docker.io/v1/', '8f8cde78-e764-4b32-8606-d564017749a4') {
        def app = docker.build("anilachanta/nodejsapp:${commit_id}", '.').push()
      }
    }
